--- a/css/db.css
+++ b/css/db.css
@@ -3,9 +3,9 @@ body { margin: 0; background-color: #eeeeee; font-family: 'Arial', sans-serif; f
 #layout { height: 100%; }
 #layout_top { background-color: #cccccc; height: 60px; min-height: 60px; max-height: 60px; }
 #layout_bottom { background-color: #cccccc; height: 20px; min-height: 20px; max-height: 20px; }
-#layout_left { padding: 10px; min-width: 80px; max-width: 80px; }
-#layout_right { padding: 10px; min-width: 80px; max-width: 80px; }
-#layout_content { padding: 10px; }
+#layout_left { padding: 10px; min-width: 160px; max-width: 160px; }
+#layout_right { padding: 10px; min-width: 160px; max-width: 160px; }
+#layout_content { background-color: #e9e9e9; padding: 10px; }
 
 table.list { background-color: #dddddd; width: 80%; }
 td.list { padding-left: 4px; padding-right: 4px; }
@@ -13,7 +13,7 @@ a.list { text-decoration: none; color: inherit; }
 
 table.cat_nav { background-color: #dddddd; margin: 0px; padding: 0px; border: 0px; }
 th.cat_nav { background-color: #bbbbbb; }
-ul.cat_nav { list-style-type: circle; }
+ul.cat_nav { padding-left: 20px; list-style-type: circle; }
 li.cat_nav_active { list-style-type: square; }
 a.cat_nav { text-decoration: none; color: inherit; }
 
