--- a/css/db.css
+++ b/css/db.css
@@ -7,42 +7,25 @@ abbr { cursor: url('../img/application-x-mplayer2.png'), auto; }
 
 #layout { height: 100%; }
 #layout_top { background-color: #cccccc; height: 60px; min-height: 60px; max-height: 60px; }
-#layout_bottom { background-color: #cccccc; height: 20px; min-height: 20px; max-height: 20px; }
+#layout_bottom { font-family: 'Verdana', sans-serif; font-size: 9pt; background-color: #cccccc; height: 20px; min-height: 20px; max-height: 20px; }
 #layout_left { padding: 10px; min-width: 160px; max-width: 160px; }
 #layout_right { padding: 10px; min-width: 160px; max-width: 160px; }
 #layout_content { background-color: #e9e9e9; padding: 10px; }
+
+#list_topbot { font-weight: normal; background-color: #eeeeff; outline-style: solid; outline-width: 1px; outline-color: #ccccff; }
+#list_filter_id { text-align: right; }
 
 table.list { background-color: #dddddd; width: 80%; }
 td.list { padding-left: 4px; padding-right: 4px; }
 a.list { text-decoration: none; color: inherit; }
 
-table.cat_nav { background-color: #dddddd; margin: 0px; padding: 0px; border: 0px; }
+table.cat_nav { font-family: 'Verdana', sans-serif; font-size: 9pt; background-color: #dddddd; margin: 0px; padding: 0px; border: 0px; }
 th.cat_nav { background-color: #bbbbbb; }
 ul.cat_nav { padding-left: 20px; list-style-type: circle; }
 li.cat_nav_active { list-style-type: square; }
 a.cat_nav { text-decoration: none; color: inherit; }
 
-#list_topbot { font-weight: normal; background-color: #eeeeff; outline-style: solid; outline-width: 1px; outline-color: #ccccff; }
-
 th.hack { min-width: 45px; max-width: 45px; }
-
-.duration { font-family: 'Courier New', 'Lucida Console', monospace; }
-
-.cat_0 { color: #3333ff; }
-.cat_1 { color: black; }
-.cat_2 { color: #66339f; }
-.cat_3 { color: #253100; }
-.cat_4 { color: #510000; }
-
-.parity_0 { background-color: #bbbbbb; }
-.parity_1 { background-color: #cccccc; }
-
-.ltitle { font-weight: bold; }
-
-.hack { font-family: Hack, 'Lucida Console', monospace; }
-.red_text { color: red; }
-
-.lingos { font-style: italic; }
 
 a.page_nr { text-decoration: none; color: inherit; }
 td.page_nr { font-size: 9pt; padding: 3px; border-width: 1px; border-style:solid; border-color: #ddddff; background-color: white; color: #3333ff; }
@@ -54,4 +37,29 @@ td select.list_filter { min-width: 10px; max-width: 100%; width: 100%; }
 td.list_filter { padding: 2px; }
 tr.list_filter { background-color: #9d9dcf; }
 
-#list_filter_id { text-align: right; }
+a.pdflink { font-family: 'Verdana', sans-serif; 
+	    font-size: 9pt; 
+	    color: #3333ff; 
+	    padding-top: 12px; 
+	    padding-left: 5px; 
+	    padding-right: 24px; 
+	    background: transparent url('../img/application-pdf.png') no-repeat right; }
+
+.cat_0 { color: #3333ff; }
+.cat_1 { color: black; }
+.cat_2 { color: #66339f; }
+.cat_3 { color: #253100; }
+.cat_4 { color: #510000; }
+
+.parity_0 { background-color: #bbbbbb; }
+.parity_1 { background-color: #cccccc; }
+
+.ltitle { font-weight: bold; }
+.lingos { font-style: italic; }
+.duration { font-family: 'Courier New', 'Lucida Console', monospace; }
+
+.hack { font-family: Hack, 'Lucida Console', monospace; }
+.red_text { color: red; }
+
+.notes { font-family: 'Verdana', sans-serif; font-size: 9pt; padding: 8px; }
+.note_link { color: #3333ff; }
