--- a/css/db.css
+++ b/css/db.css
@@ -1,65 +1,245 @@
-body { margin: 0; background-color: #eeeeee; font-family: 'Arial', sans-serif; font-size: 10pt; }
-a { text-decoration: none; color: inherit; }
+/* Schrottfilme - Webinterface. (c) 2017 by Heiko Schaefer <heiko@rangun.de> */
 
-abbr { cursor: url('../img/application-x-mplayer2.png'), auto; }
+body {
+  margin: 0px;
+  border: 0px;
+  padding: 0px;
+  background-color: #eeeeee;
+  font-family: 'Verdana', sans-serif;
+  font-size: 9pt;
+}
 
-#filter_submit { display:none; }
+abbr { 
+  cursor: url('../img/application-x-mplayer2.png'), auto; 
+}
 
-#layout { height: 100%; }
-#layout_top { background-color: #cccccc; height: 60px; min-height: 60px; max-height: 60px; }
-#layout_bottom { font-family: 'Verdana', sans-serif; font-size: 9pt; background-color: #cccccc; height: 20px; min-height: 20px; max-height: 20px; }
-#layout_left { padding: 10px; min-width: 160px; max-width: 160px; }
-#layout_right { padding: 10px; min-width: 160px; max-width: 160px; }
-#layout_content { background-color: #e9e9e9; padding: 10px; }
+a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 9pt;
+}
 
-#list_topbot { font-weight: normal; background-color: #eeeeff; outline-style: solid; outline-width: 1px; outline-color: #ccccff; }
-#list_filter_id { text-align: right; }
+ul {
+  margin-bottom: 0px;
+}
 
-table.list { background-color: #dddddd; width: 80%; }
-td.list { padding-left: 4px; padding-right: 4px; }
-a.list { text-decoration: none; color: inherit; }
+li {
+  font-size: 9pt;
+}
 
-table.cat_nav { font-family: 'Verdana', sans-serif; font-size: 9pt; background-color: #dddddd; margin: 0px; padding: 0px; border: 0px; }
-th.cat_nav { background-color: #bbbbbb; }
-ul.cat_nav { padding-left: 20px; list-style-type: circle; }
-li.cat_nav_active { list-style-type: square; }
-a.cat_nav { text-decoration: none; color: inherit; }
+table, th, td {
+  margin: 0px;
+  border: 0px;
+  padding: 0px;
+  vertical-align: top;
+}
 
-th.hack { min-width: 45px; max-width: 45px; }
+.cat_nav {
+  background-color: #dddddd;
+}
 
-a.page_nr { text-decoration: none; color: inherit; }
-td.page_nr { font-size: 9pt; padding: 3px; border-width: 1px; border-style:solid; border-color: #ddddff; background-color: white; color: #3333ff; }
-td.page_nr.page_active { color: white; background-color: #3333ff; }
+th.cat_nav {
+  background-color: #bbbbbb;
+  padding-bottom: 2px;
+  font-size: 9pt;
+}
 
-td input.list_filter { min-width: 10px; max-width: 100%; width: 100%; }
-td select.list_filter { min-width: 10px; max-width: 100%; width: 100%; }
+ul.cat_nav {
+  padding-left: 20px;
+  list-style-type: circle; 
+}
 
-td.list_filter { font-family: 'Verdana', sans-serif; font-size: 9pt; padding: 2px; }
-tr.list_filter { background-color: #9d9dcf; }
+li.cat_nav_active {
+  list-style-type: square;
+}
 
-a.pdflink { font-family: 'Verdana', sans-serif; 
-	    font-size: 9pt; 
-	    color: #3333ff; 
-	    padding-top: 12px; 
-	    padding-left: 5px; 
-	    padding-right: 24px; 
-	    background: transparent url('../img/application-pdf.png') no-repeat right; }
+.list {
+  font-family: 'Arial', sans-serif;
+  font-size: 10.5pt;
+}
 
-.cat_0 { color: #3333ff; }
-.cat_1 { color: black; }
-.cat_2 { color: #66339f; }
-.cat_3 { color: #253100; }
-.cat_4 { color: #510000; }
+table.list {
+  background-color: #dddddd;
+  min-width: 1170px;
+}
 
-.parity_0 { background-color: #bbbbbb; }
-.parity_1 { background-color: #cccccc; }
+td.list {
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
 
-.ltitle { font-weight: bold; }
-.lingos { font-style: italic; }
-.duration { font-family: 'Courier New', 'Lucida Console', monospace; }
+a.list {
+  background-color: #eeeeff;
+}
 
-.hack { font-family: Hack, 'Lucida Console', monospace; }
-.red_text { color: red; }
+a.note_link {
+  color: #3333ff;
+}
 
-.notes { font-family: 'Verdana', sans-serif; font-size: 9pt; padding: 8px; }
-.note_link { color: #3333ff; }
+a.pdflink {
+  color: #3333ff; 
+  padding-top: 12px; 
+  padding-left: 5px; 
+  padding-right: 60px; 
+  background: transparent url('../img/application-pdf.png') no-repeat right;
+}
+	    
+.hack {
+  font-family: Hack, 'Lucida Console', monospace;
+}
+
+.ltitle {
+  font-weight: bold;
+}
+
+.lingos {
+  font-style: italic;
+}
+
+.duration {
+  font-family: 'Courier New', 'Lucida Console', monospace;
+}
+
+.min_th {
+  width: 0%;
+}
+
+.max_th {
+  width: 100%;
+}
+
+.cat_0 { 
+  color: #3333ff;
+}
+
+.cat_1 {
+  color: black;
+}
+
+.cat_2 {
+  color: #66339f;
+}
+
+.cat_3 {
+  color: #253100;
+}
+
+.cat_4 {
+  color: #510000;
+}
+
+table.list tr.parity_0 {
+  background-color: #bbbbbb;
+}
+
+table.list tr.parity_1 {
+  background-color: #cccccc;
+}
+
+td.list_filter {
+  font-family: 'Verdana', sans-serif; 
+  font-size: 9pt;
+  padding: 2px;
+  padding-top: 4px;
+}
+
+tr.list_filter { 
+  background-color: #9d9dcf;
+}
+
+.notes {
+  padding: 8px;
+  font-size: 8pt;
+}
+
+.red_text {
+  color: red;
+}
+
+td.page_nr {
+  font-family: 'Arial', sans-serif;
+  font-size: 9pt;
+  padding: 3px;
+  border-width: 1px;
+  border-style:solid;
+  border-color: #ddddff;
+  background-color: white;
+  color: #3333ff;
+}
+
+td.page_nr.page_active {
+  color: white;
+  background-color: #3333ff;
+}
+
+#layout {
+  height: 100%;
+}
+
+#layout_left {
+  padding-top: 10px;
+  padding-left: 10px;
+  width: 220px;
+  max-width: 220px;
+  min-width: 220px;
+}
+
+#layout_right {
+  padding-top: 10px;
+  padding-right: 10px;
+  width: 220px;
+  max-width: 220px;
+  min-width: 220px;
+}
+
+#layout_top {
+  font-family: 'Arial', sans-serif;
+  background-color: #cccccc;
+  padding-top: 10px;
+  height: 60px;
+  min-height: 60px;
+  max-height: 60px;
+}
+
+#layout_bottom {
+  background-color: #cccccc;
+  height: 20px;
+  min-height: 20px;
+  max-height: 20px;
+}
+
+#layout_content {
+  padding: 10px;
+}
+
+#list_topbot {
+  font-weight: normal;
+  background-color: #eeeeff;
+  outline-style: solid;
+  outline-width: 1px;
+  outline-color: #ccccff;
+}
+
+#title_link {
+  font-size: 20pt;
+  text-shadow: 1px 1px #bbbbbb, 2px 2px #bbbbbb, 3px 3px #bbbbbb;
+  top: 0;
+  left: 0;
+  transition: all 0.3s ease-out;
+}
+
+#list_filter_id {
+  text-align: right;
+  float: right;
+  width: 50px;
+}
+
+#list_filter_ltitle {
+  width: 100%;
+}
+
+#filter_submit { 
+  display:none;
+}
