--- a/css/db.css
+++ b/css/db.css
@@ -72,6 +72,7 @@ td.list {
 
 a.list {
   background-color: #eeeeff;
+  display: block;
 }
 
 a.note_link {
@@ -82,7 +83,7 @@ a.pdflink {
   color: #3333ff; 
   padding-top: 12px; 
   padding-left: 5px; 
-  padding-right: 60px; 
+  padding-right: 60px;
   background: transparent url('../img/application-pdf.png') no-repeat right;
 }
 	    
@@ -158,6 +159,10 @@ tr.list_filter {
   color: red;
 }
 
+a.page_nr {
+  display: block;
+}
+
 td.page_nr {
   font-family: 'Arial', sans-serif;
   font-size: 9pt;
@@ -198,6 +203,7 @@ td.page_nr.page_active {
   font-family: 'Arial', sans-serif;
   background-color: #cccccc;
   padding-top: 10px;
+  padding-bottom: 10px;
   height: 60px;
   min-height: 60px;
   max-height: 60px;
@@ -205,6 +211,8 @@ td.page_nr.page_active {
 
 #layout_bottom {
   background-color: #cccccc;
+  padding-top: 5px;
+  padding-bottom: 5px;
   height: 20px;
   min-height: 20px;
   max-height: 20px;
