--- a/css/screen.css
+++ b/css/screen.css
@@ -116,34 +116,65 @@ td.list {
   padding-right: 5px;
 }
 
-td.list input[type=checkbox], div.answer {
-  display: none;
-}
-
-td.list label {
+td.list.hack a {
+  font: inherit;
   display: block;
-  background-color: transparent;
 }
 
-td.list input[type=checkbox]:checked ~ .answer {
-  
-  display: inline;
-  /* some styles to position the modal at the center of the page */
+.modalDialog {
+  position: fixed;
+  font-family: Arial, Helvetica, sans-serif;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 99999;
+  opacity: 0;
+  -webkit-transition: opacity 400ms ease-in;
+  -moz-transition: opacity 400ms ease-in;
+  transition: opacity 400ms ease-in;
+  pointer-events: none;
+}
+
+.modalDialog:target {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.modalDialog > div {
+  width: 400px;
+  position: relative;
+  margin: 10% auto;
+  padding: 5px 20px 13px 20px;
+  border-radius: 10px;
+  background: #fff;
+  background: -moz-linear-gradient(#fff, #999);
+  background: -webkit-linear-gradient(#fff, #999);
+  background: -o-linear-gradient(#fff, #999);
+}
+
+.close {
+  background: #606061;
+  color: #FFFFFF;
+  line-height: 25px;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 300px;
-  line-height: 200px;
-  height: 200px;
-  margin-left: -150px;
-  margin-top: -100px;
-  background-color: #f1c40f;
+  right: -12px;
   text-align: center;
-  border-radius: 5px;
-  
-  /* needed styles for the overlay */
-  z-index: 1000; /* keep on top of other elements on the page */
-  box-shadow: 0 0 0 9999px rgba(0,0,0,0.5);
+  top: -10px;
+  width: 24px;
+  text-decoration: none;
+  font-weight: bold;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  border-radius: 12px;
+  -moz-box-shadow: 1px 1px 3px #000;
+  -webkit-box-shadow: 1px 1px 3px #000;
+  box-shadow: 1px 1px 3px #000;
+}
+
+.close:hover {
+  background: #00d9ff;
 }
 
 a.list {
