fixed userbox inputs

--- a/css/screen.css
+++ b/css/screen.css
@@ -35,11 +35,14 @@ input[type=text]:focus {
 }
 
 table.userbox td label {
-  width: 100%;
+  width: 200px;
+  display: inline-block;
+  text-align: right;
 }
 
 table.userbox td label input[type=text], table.userbox td label input[type=password] {
-  display: ruby-base-container;
+  border-color: #cccccc;
+  width: 120px;
 }
 
 table.userbox td input[type=submit] {
