--- a/css/screen.css
+++ b/css/screen.css
@@ -1,11 +1,34 @@
 /* Schrottfilme - Webinterface. (c) 2017 by Heiko Schaefer <heiko@rangun.de> */
 
+:root {
+  --cat_0: #3333ff;
+  --cat_1: black;
+  --cat_2: #66339f;
+  --cat_3: #253100;
+  --cat_4: #510000;
+  --col1:  #eeeeee;
+  --col2:  #ffffff;
+  --col3:  #606061;
+  --col4:  #3333ff;
+  --col5:  #7e7eff;
+  --col6:  #cccccc;
+  --col7:  #dddddd;
+  --col8:  #bbbbbb;
+  --col9:  #00d9ff;
+  --col10: #eeeeff;
+  --col11: #9d9dcf;
+  --col12: #ddddff;
+  --col13: #ccccff;
+  --col14: blue;
+  --col15: red;
+}
+
 html, body {
   margin: 0px;
   border: 0px;
   padding: 0px;
   height: 100%;
-  background-color: #eeeeee;
+  background-color: var(--col1);
   font-family: 'Verdana', sans-serif;
   font-size: 9pt;
 }
@@ -26,12 +49,12 @@ li {
 
 input[type=text] {
   padding-top: 5px; 
-  border: 2px solid #7e7eff; 
+  border: 2px solid var(--col5); 
   border-radius: 5px;
 }
 
 input[type=text]:focus {
-  border-color: blue;
+  border-color: var(--col14);
 }
 
 table.userbox td label {
@@ -41,13 +64,13 @@ table.userbox td label {
 }
 
 table.userbox td label input[type=text], table.userbox td label input[type=password] {
-  border-color: #cccccc;
+  border-color: var(--col6);
   width: 120px;
 }
 
 table.userbox td input[type=submit] {
   padding: 5px 15px;
-  background:#cccccc;
+  background:var(--col6);
   border: 0 none;
   cursor: pointer;
   border-radius: 5px;
@@ -59,7 +82,7 @@ table.userbox td input[type=file] {
 
 table.userbox td input[type=file]:after {
   padding: 5px 15px;
-  background:#cccccc;
+  background:var(--col6);
   border: 0 none;
   cursor: pointer;
   border-radius: 5px;
@@ -67,12 +90,12 @@ table.userbox td input[type=file]:after {
 
 select {
   padding-top: 5px; 
-  border: 2px solid #7e7eff; 
+  border: 2px solid var(--col5); 
   border-radius: 5px;
 }
 
 select:focus {
-  border-color: blue;
+  border-color: var(--col14);
 }
 
 table, th, td {
@@ -83,11 +106,11 @@ table, th, td {
 }
 
 .cat_nav {
-  background-color: #dddddd;
+  background-color: var(--col7);
 }
 
 th.cat_nav {
-  background-color: #bbbbbb;
+  background-color: var(--col8);
   padding-bottom: 2px;
   font-size: 9pt;
 }
@@ -108,7 +131,7 @@ li.cat_nav_active {
 }
 
 table.list {
-  background-color: #dddddd;
+  background-color: var(--col7);
   min-width: 1170px;
 }
 
@@ -148,7 +171,7 @@ td.list a, td.list.hack a {
   margin: 10% auto;
   padding: 5px 20px 13px 20px;
   border-radius: 10px;
-  background: #fff;
+  background: var(--col2)
   background: -moz-linear-gradient(#fff, #999);
   background: -webkit-linear-gradient(#fff, #999);
   background: linear-gradient(#fff, #999);
@@ -156,8 +179,8 @@ td.list a, td.list.hack a {
 }
 
 .close {
-  background: #606061;
-  color: #FFFFFF;
+  background: var(--col3);
+  color: var(--col2);
   line-height: 25px;
   position: absolute;
   right: -12px;
@@ -175,7 +198,7 @@ td.list a, td.list.hack a {
 }
 
 .close:hover {
-  background: #00d9ff;
+  background: var(--col9);
 }
 
 div.ua {
@@ -187,15 +210,15 @@ div.ua {
 }
 
 a.list {
-  background-color: #eeeeff;
+  background-color: var(--col10);
 }
 
 a.note_link {
-  color: #3333ff;
+  color: var(--col4);
 }
 
 a.pdflink {
-  color: #3333ff; 
+  color: var(--col4); 
   padding-top: 12px; 
   padding-left: 5px; 
   padding-right: 60px;
@@ -224,8 +247,8 @@ a.pdflink {
 .hasTooltip:hover span {
   display: block;
   position: absolute;
-  background-color: #eeeeff;
-  border: 1px solid #CCCCCC;
+  background-color: var(--col10);
+  border: 1px solid var(--col6);
   margin: 2px 10px;
 }
 
@@ -246,31 +269,31 @@ a.pdflink {
 }
 
 .cat_0 { 
-  color: #3333ff;
+  color: var(--cat_0);
 }
 
 .cat_1 {
-  color: black;
+  color: var(--cat_1);
 }
 
 .cat_2 {
-  color: #66339f;
+  color: var(--cat_2);
 }
 
 .cat_3 {
-  color: #253100;
+  color: var(--cat_3);
 }
 
 .cat_4 {
-  color: #510000;
+  color: var(--cat_4);
 }
 
 table.list tr.parity_0 {
-  background-color: #bbbbbb;
+  background-color: var(--col8);
 }
 
 table.list tr.parity_1 {
-  background-color: #cccccc;
+  background-color: var(--col6);
 }
 
 td.list_filter {
@@ -281,7 +304,7 @@ td.list_filter {
 }
 
 tr.list_filter { 
-  background-color: #9d9dcf;
+  background-color: var(--col11);
 }
 
 .notes {
@@ -290,7 +313,7 @@ tr.list_filter {
 }
 
 .red_text {
-  color: red;
+  color: var(--col15);
 }
 
 a.page_nr {
@@ -303,14 +326,14 @@ td.page_nr {
   padding: 3px;
   border-width: 1px;
   border-style:solid;
-  border-color: #ddddff;
-  background-color: white;
-  color: #3333ff;
+  border-color: var(--col11);
+  background-color: var(--col2);
+  color: var(--col4);
 }
 
 td.page_nr.page_active {
-  color: white;
-  background-color: #3333ff;
+  color: var(--col2);
+  background-color: var(--col4);
 }
 
 #layout {
@@ -335,21 +358,21 @@ td.page_nr.page_active {
 
 #layout_top {
   font-family: 'Arial', sans-serif;
-  background-color: #cccccc;
+  background-color: var(--col6);
   padding-top: 10px;
   padding-bottom: 10px;
   height: 60px;
   min-height: 60px;
   max-height: 60px;
-  background: #eeeeee;
+  background: var(--col1);
   background: -moz-linear-gradient(-45deg, #eeeeee 0%, #cccccc 100%);
-  background: -webkit-linear-gradient(-45deg, #eeeeee 0%,#cccccc 100%);
-  background: linear-gradient(135deg, #eeeeee 0%,#cccccc 100%);
+  background: -webkit-linear-gradient(-45deg, #eeeeee 0%, #cccccc 100%);
+  background: linear-gradient(135deg, #eeeeee 0%, #cccccc 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=1 );
 }
 
 #layout_bottom {
-  background-color: #cccccc;
+  background-color: var(--col6);
   padding-top: 5px;
   padding-bottom: 5px;
   height: 20px;
@@ -363,15 +386,15 @@ td.page_nr.page_active {
 
 #list_topbot {
   font-weight: normal;
-  background-color: #eeeeff;
+  background-color: var(--col10);
   outline-style: solid;
   outline-width: 1px;
-  outline-color: #ccccff;
+  outline-color: var(--col13);
 }
 
 #title_link {
   font-size: 20pt;
-  text-shadow: 1px 1px #bbbbbb, 2px 2px #bbbbbb, 3px 3px #bbbbbb;
+  text-shadow: 1px 1px var(--col8), 2px 2px var(--col8), 3px 3px var(--col8);
   top: 0;
   left: 0;
   transition: all 0.3s ease-out;
