--- a/css/screen.css
+++ b/css/screen.css
@@ -17,6 +17,36 @@
  * along with webvirus.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+@media (max-width: 1366px) {
+  :root {
+    --nf: 8pt;
+    --lf: 17pt;
+    --mf: 9.5pt;
+    --tf: 7.5pt;
+    --ef: 7.5pt;
+    --pdfpic: 30px;
+    --list-table-width: 936px;
+    --layout-lr-width: 176px;
+    --input-width: 96px;
+    --label-width: 160px;
+  }
+}
+
+@media (min-width: 1367px) {
+  :root {
+    --nf: 9pt;
+    --lf: 20pt;
+    --mf: 10.5pt;
+    --tf: 8.5pt;
+    --ef: 8pt;
+    --pdfpic: 60px;
+    --list-table-width: 1170px;
+    --layout-lr-width: 220px;
+    --input-width: 120px;
+    --label-width: 200px;
+  }
+}
+
 html, body {
   margin: 0px;
   border: 0px;
@@ -24,13 +54,13 @@ html, body {
   height: 100%;
   background-color: var(--col1);
   font-family: 'Verdana', sans-serif;
-  font-size: 9pt;
+  font-size: var(--nf);
 }
 
 a {
   text-decoration: none;
   color: inherit;
-  font-size: 9pt;
+  font-size: var(--nf);
 }
 
 ul {
@@ -38,7 +68,7 @@ ul {
 }
 
 li {
-  font-size: 9pt;
+  font-size: var(--nf);
 }
 
 input[type=text] {
@@ -52,14 +82,14 @@ input[type=text]:focus {
 }
 
 table.userbox td label {
-  width: 200px;
+  width: var(--label-width);
   display: inline-block;
   text-align: right;
 }
 
 table.userbox td label input[type=text], table.userbox td label input[type=password] {
   border-color: var(--col6);
-  width: 120px;
+  width: var(--input-width);
 }
 
 table.userbox td input[type=submit], #remember_button {
@@ -68,6 +98,7 @@ table.userbox td input[type=submit], #remember_button {
   border: 0 none;
   cursor: pointer;
   border-radius: 5px;
+  font-size: var(--nf);
 }
 
 table.userbox td input[type=file] {
@@ -106,7 +137,7 @@ table, th, td {
 th.cat_nav {
   background-color: var(--col8);
   padding-bottom: 2px;
-  font-size: 9pt;
+  font-size: var(--nf);
 }
 
 ul.cat_nav {
@@ -121,12 +152,12 @@ li.cat_nav_active {
 
 .list {
   font-family: 'Arial', sans-serif;
-  font-size: 10.5pt;
+  font-size: var(--mf);
 }
 
 table.list {
   background-color: var(--col7);
-  min-width: 1170px;
+  min-width: var(--list-table-width);
 }
 
 td.list {
@@ -215,7 +246,7 @@ a.pdflink {
   color: var(--col4);
   padding-top: 12px;
   padding-left: 5px;
-  padding-right: 60px;
+  padding-right: var(--pdfpic);
   background: transparent url('../img/application-pdf.png') no-repeat right;
 }
 
@@ -234,7 +265,7 @@ a.pdflink {
 .hasTooltip span {
   display: none;
   text-decoration: none;
-  font-size: 8.5pt;
+  font-size: var(--tf);
   padding: 3px;
 }
 
@@ -292,7 +323,7 @@ table.list tr.parity_1 {
 
 td.list_filter {
   font-family: 'Verdana', sans-serif;
-  font-size: 9pt;
+  font-size: var(--nf);
   padding: 2px;
   padding-top: 4px;
 }
@@ -307,7 +338,7 @@ tr.list_filter {
 
 .notes {
   padding: 8px;
-  font-size: 8pt;
+  font-size: var(--ef);
 }
 
 .red_text {
@@ -321,7 +352,7 @@ a.page_nr {
 
 td.page_nr {
   font-family: 'Arial', sans-serif;
-  font-size: 9pt;
+  font-size: var(--nf);
   padding: 3px;
   border-width: 1px;
   border-style:solid;
@@ -343,17 +374,17 @@ td.page_nr.page_active {
 #layout_left {
   padding-top: 10px;
   padding-left: 10px;
-  width: 220px;
-  max-width: 220px;
-  min-width: 220px;
+  width: var(--layout-lr-width);
+  max-width: var(--layout-lr-width);
+  min-width: var(--layout-lr-width);
 }
 
 #layout_right {
   padding-top: 10px;
   padding-right: 10px;
-  width: 220px;
-  max-width: 220px;
-  min-width: 220px;
+  width: var(--layout-lr-width);
+  max-width: var(--layout-lr-width);
+  min-width: var(--layout-lr-width);
 }
 
 #layout_top {
@@ -393,7 +424,7 @@ td.page_nr.page_active {
 }
 
 #title_link {
-  font-size: 20pt;
+  font-size: var(--lf);
   text-shadow: 1px 1px var(--col8), 2px 2px var(--col8), 3px 3px var(--col8);
   top: 0;
   left: 0;
