--- a/css/screen.css
+++ b/css/screen.css
@@ -47,6 +47,23 @@
   }
 }
 
+@media (max-width: 1101px) {
+  :root {
+    --nf: 8pt;
+    --lf: 17pt;
+    --mf: 8pt;
+    --tf: 7.5pt;
+    --ef: 7.5pt;
+    --pdfpic: 30px;
+    /*--list-table-width: 936px;
+    --layout-lr-width: 176px;*/
+    --list-table-width: 900px;
+    --layout-lr-width: 176px;
+    --input-width: 96px;
+    --label-width: 160px;
+  }
+}
+
 html, body {
   margin: 0px;
   border: 0px;
@@ -387,6 +404,12 @@ td.page_nr.page_active {
   width: var(--layout-lr-width);
   max-width: var(--layout-lr-width);
   min-width: var(--layout-lr-width);
+}
+
+@media (max-width: 1101px) {
+  #layout_right {
+    display:none;
+  }
 }
 
 #layout_top {
