--- a/css/screen.css
+++ b/css/screen.css
@@ -70,7 +70,7 @@
     --searchfield_height: 80px;
     --searchfield_fontsize: 20pt;
     --sugg-font-size: 16pt;
-    --top-height: 100pt;
+    --top-height: 20%;
   }
 }
 
@@ -136,6 +136,14 @@ li {
   font-size: var(--nf);
 }
 
+h1 {
+  max-width: 25%;
+}
+
+h3 {
+  max-width: 25%;
+}
+
 input[type=text] {
   padding-top: 5px;
   border: 2px solid var(--col5);
@@ -151,15 +159,15 @@ input[type=text]:focus {
 @media screen and (max-width: 1281px) {
   .cat_select {
     position: absolute;
-    top: 5px;
-    left: 200px;
+    top: 0px;
+    left: 15.625%;
     width: 20%;
   }
 
   .latest_dvd {
     position: absolute;
-    top: 45px;
-    left: 840px;
+    top: 40px;
+    left: 65.625%;
     width: 20%;
   }
 
@@ -504,8 +512,8 @@ td.page_nr.page_active {
   padding-top: 10px;
   padding-bottom: 10px;
   height: var(--top-height);
-  min-height: 60px;
-  max-height: 60px;
+  min-height: var(--top-height);
+  max-height: var(--top-height);
   background: var(--col1);
   background: var(--tgrad_moz);
   background: var(--tgrad_wbk);
@@ -554,6 +562,14 @@ td.page_nr.page_active {
 
 #remember_button {
   display: inherit;
+}
+
+#mobile_pagesize {
+  position: absolute;
+  top: 105px;
+  left: 65.625%;
+  width: 20%;
+  font-family: 'Verdana', sans-serif;
 }
 
 .tt-menu {
