--- a/css/screen.css
+++ b/css/screen.css
@@ -341,6 +341,10 @@ div.ua {
   overflow: hidden;
 }
 
+td.top250 a {
+  background: transparent url('../img/top250.png') no-repeat right;
+}
+
 a.list {
   background-color: var(--col10);
 }
