--- a/css/screen.css
+++ b/css/screen.css
@@ -599,3 +599,39 @@ td.page_nr.page_active {
 .tt-cursor {
   background-color: var(--col5);
 }
+
+#ample_red {
+  display: inline-flex;
+  background: #ff000080;
+  height: 1em;
+  width: 1em;
+  margin-right: 0.25em;
+  border-radius: 100%;
+}
+
+#ample_yellow {
+  display: inline-flex;
+  background: #ffff0080;
+  height: 1em;
+  width: 1em;
+  margin-right: 0.25em;
+  border-radius: 100%;
+}
+
+#ample_green {
+  display: inline-flex;
+  background: #00ff0080;
+  height: 1em;
+  width: 1em;
+  margin-right: 0.25em;
+  border-radius: 100%;
+}
+
+#ample_off {
+  display: inline-flex;
+  background: #00000007;
+  height: 1em;
+  width: 1em;
+  margin-right: 0.25em;
+  border-radius: 100%;
+}
