--- a/css/screen.css
+++ b/css/screen.css
@@ -197,7 +197,7 @@ table.userbox td label input[type=text], table.userbox td label input[type=passw
   height: auto;
 }
 
-table.userbox td input[type=submit], #remember_button {
+.button {
   padding: 5px 15px;
   background:var(--col6);
   border: 0 none;
